app/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: debt-management-frontend-service
  labels:
    app: debt-management-frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: debt-management-frontend
